syntax = "proto3";

service ProductService {
  rpc GetProduct(Id) returns (Product) {}
  rpc GetAllProducts (Empty) returns (ProductList) {}
  rpc AddProduct(Product) returns (Id) {}
  rpc DeleteProduct (Id) returns (Empty) {}
  rpc EditProduct (Product) returns (Product) {}
}

message Product {
  string id = 1;
  string name = 2;
  float price = 3;
}

message Id {
  string id = 1;
}

message Empty {}

message ProductList {
  repeated Product products = 1;
}